style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

html {
  font-family: "Roboto";
}

body {
  min-height: 100vh;
  display: flex;
  width: 100vw;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

header {
  justify-content: space-around;
}

header,
footer {
  display: flex;
  flex-shrink: 0;
  flex-grow: 0;
  background-color: #1f2937;
  height: 72px;
  align-items: center;
}

li {
  list-style: none;
}
a {
  text-decoration: none;
}
h1,
h2,
p,
ul {
  margin: 0;
}

.logo {
  font-size: 24px;
  font-weight: bold;
  color: #f9faf8;
}

.header-links {
  display: flex;
  gap: 16px;
  font-size: 18px;
  color: #e5e7eb;
}

main {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.hero-section {
  background-color: #1f2937;
  display: flex;
  justify-content: space-around;
  padding-top: 52px;
  padding-bottom: 52px;
}

.hero-heading {
  color: #f9faf8;
  font-size: 48px;
  font-weight: 900;
}

.hero-secondary {
  color: #e5e7eb;
  font-size: 18px;
  padding-bottom: 8px;
}

.hero-left {
  width: 50%;
}

.hero-right {
  width: 50%;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: center;
}

.hero-content {
  display: flex;
  justify-content: space-between;
  /* gap: 32px;*/
  width: 70%;
}

.hero-text {
  width: 80%;
}

.hero-img {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.hero-img img {
  width: 60%;
}

.image img {
  width: 100px;
  height: 100px;
  color: white;
  background-color: e5e7eb;
  border: 3px solid #3882f6;
  border-radius: 1.5rem;
}

button {
  background-color: #3882f6;
  border: 0;
  padding: 8px 16px;
  border-radius: 0.5em;
  color: #f9faf8;
  font-weight: bold;
}

.info-section {
  padding-top: 32px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 52px;
}

.title {
  font-size: 36px;
  font-weight: 900;
  margin-bottom: 32px;
  font-weight: 900;
}

.images {
  display: flex;
  gap: 52px;
}

.image {
  width: 200px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.text {
  text-align: center;
}

.quote {
  background-color: #e5e7eb;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.quote-para {
  width: 60%;
  display: flex;
  flex-direction: column;
  padding: 72px;
}

.byline {
  font-size: 18px;
  font-weight: bold;
  text-align: right;
}

.quote-text {
  font-size: 36px;
  margin: 0;
  font-weight: 100;
  font-style: italic;
  text-align: justify;
  color: #1f2937;
}

.cta {
  margin: 52px;
  display: flex;
  justify-content: center;
}

.blue-box {
  color: white;
  width: 70%;
  background-color: #3882f6;
  display: flex;
  justify-content: space-around;
  border-radius: 0.5rem;
  align-items: center;
  padding: 32px;
}

h2,
p {
  margin: 0;
}

.outline {
  border: 2px solid white;
}

footer {
  justify-content: center;
  align-items: center;
}

footer p {
  color: #f9faf8;
}

